improvements to player hand replenishment and shuffling the prompts; also implemented used card discarding