@@ -16,6 +16,7 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 @Service
@@ -70,14 +71,20 @@ public class DeckClient implements DeckService {
 
     @Override
     public void dealHand(Player player, Deck deck) {
-        List<GameCard> responseCards = gameCardService.findByCardIdNotIn(deck.getCards().stream()
-                .filter(card -> !Objects.equals(card.getType().getName(), "Response"))
-                .map(Card::getId)
-                .collect(Collectors.toList()));
+        List<GameCard> usedCards = gameCardService.findByGameId(player.getGameId()).stream().filter(GameCard::isUsed).toList();
+        Set<Card> responseCards = deck.getCards().stream()
+                .filter(card -> Objects.equals(card.getType().getName(), "Response"))
+                .filter(card -> usedCards.stream().noneMatch(gameCard -> Objects.equals(gameCard.getCardId(), card.getId())))
+                .collect(Collectors.toSet());
         List<Card> deckCards = new ArrayList<>(responseCards);
         Collections.shuffle(deckCards);
         List<GameCard> hand = deckCards.subList(0, 7).stream().map(card -> new GameCard(player.getGameId(), card.getId())).toList();
-        player.setHand(new HashSet<>(hand));
+        List<GameCard> unusedCards = player.getHand().stream().filter(Predicate.not(GameCard::isUsed)).toList();
+        if (unusedCards.isEmpty()) {
+            player.setHand(new HashSet<>(hand));
+        } else {
+            player.getHand().addAll(hand.subList(0, 7 - unusedCards.size()));
+        }
         playerService.save(player);
     }
 }
